View Issue Details

IDProjectCategoryView StatusLast Update
0028815Open CASCADEOCCT:Visualizationpublic2017-09-29 16:25
Reporterkgv Assigned Tobugmaster  
PrioritynormalSeveritytrivial 
Status closedResolutionfixed 
Product Version7.2.0 
Target Version7.2.0Fixed in Version7.2.0 
Summary0028815: Visualization, StdPrs_WFShape - fix misprint in condition
DescriptionThe range for OSD_Parallel::For() is specified incorrectly:
+        OSD_Parallel::For (0, aNbFaces - 1, anIsoFunctor, aNbFaces < 2);
Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2017-06-06 10:28

administrator   ~0067095

Branch CR28815 has been created by kgv.

SHA-1: e00e6cee49644e349d3a7e589a00e1ce5b035500


Detailed log of new commits:

Author: kgv
Date: Tue Jun 6 10:27:55 2017 +0300

    0028815: Visualization, StdPrs_WFShape - fix misprint in condition

kgv

2017-06-06 10:28

developer   ~0067096

Please take the patch, testing is not needed.

apv

2017-06-06 11:56

tester   ~0067111

Dear BugMaster,

Please integrate branch CR28815 into the occt git-repository master.

git

2017-06-13 17:34

administrator   ~0067355

Branch CR28815 has been deleted by kgv.

SHA-1: e00e6cee49644e349d3a7e589a00e1ce5b035500

Related Changesets

occt: master 5e3047fd

2017-06-06 07:27:55

kgv


Committer: bugmaster Details Diff
0028815: Visualization, StdPrs_WFShape - fix misprint in condition Affected Issues
0028815
mod - src/OSD/OSD_Parallel.hxx Diff File
mod - src/StdPrs/StdPrs_WFShape.cxx Diff File

Issue History

Date Modified Username Field Change
2017-06-06 10:25 kgv New Issue
2017-06-06 10:25 kgv Assigned To => kgv
2017-06-06 10:28 git Note Added: 0067095
2017-06-06 10:28 kgv Note Added: 0067096
2017-06-06 10:28 kgv Assigned To kgv => bugmaster
2017-06-06 10:28 kgv Status new => resolved
2017-06-06 10:28 kgv Status resolved => reviewed
2017-06-06 11:56 apv Note Added: 0067111
2017-06-06 11:56 apv Status reviewed => tested
2017-06-06 11:56 apv Test case number => Not needed
2017-06-09 14:06 bugmaster Changeset attached => occt master 5e3047fd
2017-06-09 14:06 bugmaster Status tested => verified
2017-06-09 14:06 bugmaster Resolution open => fixed
2017-06-13 17:34 git Note Added: 0067355
2017-09-29 16:18 aiv Fixed in Version => 7.2.0
2017-09-29 16:25 aiv Status verified => closed