0028815: Visualization, StdPrs_WFShape - fix misprint in condition